fix: Layout shifts

--- a/src/app/landing/header-v2/header-v2.component.scss
+++ b/src/app/landing/header-v2/header-v2.component.scss
@@ -68,14 +68,14 @@ nav {
         border-radius: 40px;
         padding: 8px 24px;
 
-        transition: background 100ms linear;
+        transition: background 100ms linear, outline 50ms linear;
         &:hover {
           background: #d9e2ff;
         }
 
         &.active {
           background: #d9e2ff;
-          border: 1px solid #345ca8;
+          outline: solid 1px #345ca8;
           color: #345ca8;
         }
 
